# comictools

./: .gitignore  BUGLIST.md  LICENSE  README.md  TASKLIST.md  UX_ideas.md  agent_test.py  comic.py  dateutils.py  main.py  messaging.py  pyproject.toml  state.json.pre-thread.bak  test.py  vision.md
.teaparty.local/: project.yaml
agentic/: __init__.py  character.py  constants.py  instructions.py  issue.py  publisher.py  series.py  style.py  toolkits.py  tools.py  variant.py
docs/: AUTH.md  Memory.md  architecture.md  asset-library.md  database-design.md  getting-started.md  users-guide.md  ux-critique.md  vision.md
generators/: __init__.py  agents.py  all_publishers.py  all_series.py  all_styles.py  character.py  constants.py  cover.py  issue.py  panel.py  publisher.py  scene.py  series.py  style.py  tools.py  variant.py
gui/: asset_view.py  avatars.py  cardwall.py  character.py  coauthor.py  constants.py  cover.py  create_asset.py  drawer.py  elements.py  home.py  image_editor.py  image_editor_choices.py  insert.py  issue.py  library.py  light_table.py  location.py  markdown.py  messaging.py  nodes.py  pages_board.py  palette.py  panel.py  publisher.py  reference_image.py  routes.py  scene.py  selection.py  series.py  setting.py  speech.py  state.py  strike.py  style.py  styled_image.py  thread.py  variant.py
helpers/: agent_thread.py  binder.py  compositor.py  constants.py  file.py  generator.py  house_git.py  image.py  ledger.py  masters.py  pagination.py  production.py  render_queue.py  rough_face.py  stitcher.py  tilings.py  trade_dress.py
schema/: page.py  (+22 more)
(+165 files in other folders)
